22 Jul 2009
 * Update version to 0.2.x.

29 Jun 2009
 * Start of CHANGELOG in preparation for 0.1.0 release.