@@ -19,6 +19,8 @@ import sys, os
 sys.path.insert(0, os.path.abspath('..'))
 sys.path.insert(0, os.path.abspath('./exts'))
 
+import katcp
+
 # -- General configuration -----------------------------------------------------
 
 # Add any Sphinx extension module names here, as strings. They can be extensions
@@ -46,9 +48,9 @@ copyright = u'2009, SKA South Africa'
 # built documents.
 #
 # The short X.Y version.
-version = '0.1'
+version = '.'.join([str(x) for x in katcp.VERSION[:2]])
 # The full version, including alpha/beta/rc tags.
-release = '0.1.0a1'
+release = katcp.VERSION_STR
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
