@@ -13,11 +13,13 @@ setup (
         "scripts/katcp-exampleserver.py",
         "scripts/katcp-exampleclient.py",
     ],
-    url='http://ska.ac.za/',
+    url='http://pypi.python.org/pypi/katcp',
+    download_url='http://pypi.python.org/pypi/katcp',
+    license="BSD",
     classifiers=[
         "Development Status :: 3 - Alpha",
         "Intended Audience :: Developers",
-        "License :: Other/Proprietary License",
+        "License :: OSI Approved :: BSD License",
         "Operating System :: OS Independent",
         "Programming Language :: Python",
         "Topic :: Software Development :: Libraries :: Python Modules",
